html local links testing

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 
   <title>jamesfranciscus</title>
-  <h1>James Franciscus</h1>
+  <h1>James Franciscus, Private Investigator</h1>
   <p>This is a sample paragraph</p>
 </head>
 
-
 <div id=body>
   <body>
-
-
+    <p id=links>
+      <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a>
+    </p>
 
 
   </body>
