added contact page, testing links to local pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <p id=links>
       <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a>
+      <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a>
+      
     </p>
 
 
