contact page integrated

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <div id=body>
   <body>
-    <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a>
+    <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
 
   </body>
 </div>
