--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-
-  <title>jamesfranciscus</title>
-  <h1>James Franciscus, Private Investigator</h1>
-  <p>This is a sample paragraph</p>
+  <link rel="stylesheet" href="jamesfranciscus_website/css/main.css">
 </head>
 
 <div id=body>
   <body>
+    <title>jamesfranciscus</title>
+    <h1>James Franciscus, Private Investigator</h1>
+    <p>This is a sample paragraph</p>
     <p id=links>
-      <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a>
-      <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a>
+      <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
+      <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a><br>
+      <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html">Contact</a><br>
       
     </p>
 
