file re-nesting, css implemented

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
     <title>jamesfranciscus</title>
     <h1>James Franciscus, Private Investigator</h1>
-    <p>This is a sample paragraph</p>
+    <br>
+    <h2>Personal Biography</h2>
+      <p>...</p>
+    
+    <h2>Contact Links</h2>
     <p id=links>
       <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
       <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a><br>
