--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
 
   <title>jamesfranciscus</title>
   <h1>James Franciscus, Private Investigator</h1>
-  <p>This is a sample paragraph</p>
+  <p>Contact Information</p>
+  <ul>
+    <li>Phone:</li>
+    <li>Address:</li>
+    <li>Email:</li>
+  </ul>
 </head>
 
 <div id=body>
