--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
 <div id=body>
   <body>
-    <title>jamesfranciscus</title>
+    <title>James Franciscus, PI</title>
     <h1>James Franciscus, Private Investigator</h1>
-    <br>
     <h2>Personal Biography</h2>
       <p>...</p>
     
@@ -17,7 +16,6 @@
       <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
       <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a><br>
       <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html">Contact</a><br>
-      
     </p>
 
 
