--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="jamesfranciscus_website/css/main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <div id=body>
