updated the pages with resume information

--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
   <h1>James Franciscus, Private Investigator</h1>
   <p>Contact Information</p>
   <ul>
-    <li>Phone:</li>
-    <li>Address:</li>
-    <li>Email:</li>
+    <li>Phone: 484-985-1248</li>
+    <li>Address: 1101 Cambria Court, Phoenixville, Pa. 19460</li>
+    <li>Email: jfranciscus@outlook.com</li>
   </ul>
 </head>
 
-<div id=body>
+<div id="body">
   <body>
     <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
 
