--- a/index.html
+++ b/index.html
@@ -4,20 +4,96 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<div id=body>
+<div id="body">
   <body>
-    <title>James Franciscus, PI</title>
-    <h1>James Franciscus, Private Investigator</h1>
-    <h2>Personal Biography</h2>
-      <p>...</p>
-    
+    <title>James Franciscus, Safety Officer</title>
+    <h1>James Franciscus, Safety Officer</h1>
+    <!-- Fix file size and orientation 
+    <img src="https://cdn.discordapp.com/attachments/403193299244023808/444586274150547456/image.jpg" alt="Mr. James Franciscus"> 
+    -->
+    <h2>Experience</h2>
+      <h3>
+        SIGNAL 88 SECURITY (CONTRACTED SECURITY COMPANY)<br>
+        MARCH 2016 TO PRESENT<br>
+      </h3>
+        <p id="sig88">
+          I started at the Octorara School District as an armed
+          security officer. I made patrols by foot and automobile of all
+          schools. I acted as a deterrent to crime and enforced
+          school district rules and policies. July 2016 I was promoted
+          to an operations manager. I am responsible for the overall
+          operations of the Brandywine Hospital, Phoenixville
+          Hospital and Jenner’s Ponds accounts. This includes
+          quality control, hiring, firing, and training security officers.
+        </p>
+      <br>
+      <h3>
+        EAST PIKELAND TOWNSHIP<br>
+        JUNE 2002 UNTIL MAY 2016<br>
+      </h3>
+        <p id="pchief">     
+          I was the Chief of Police and responsible for the overall
+          operations of the Police Department. This included
+          budgeting, planning, hiring, disciplinary actions, interacting
+          with elected officials, and citizen’s groups, problem solving,
+          scheduling and investigations. I retired from this position
+          May 2016.
+        </p>
+      <br>
+      <h3>
+        EDUCATION
+      </h3>
+        <p id="edu">
+          I am a graduate of the Coatesville Area School District. I
+          also graduated from the Pennsylvania State Police
+          Academy and the F.B.I. National Academy. I have also
+          attended many management and criminal justice training
+          classes during my career.
+        </p>
+      <br>
+      <h3>
+        COMMUNICATION
+      </h3>
+        <p id="comm">
+          During my career, I, have had to communicate both
+          verbally and in writing to elected officials, neighborhood
+          association groups, District Attorney’s Office, news media,
+          subordinates, citizens in the community, along with people
+          under stressful situations.
+          <br>
+          I feel that I have kept my superiors well informed and have
+          been an effective communicator with others I have
+          encountered.
+        </p>
+      <br>
+      <h3>
+        LEADERSHIP
+      </h3>
+        <p id="lead">
+          I have held many leadership positions during my career
+          and I feel that I have been an effective leader. I have been a Chief of 
+          Police in two Chester County communities,
+          President of the Chester County Police Chief’s
+          Association. I have always lead by setting a good example,
+          setting the bar high for subordinates, helping to develop
+          employees to do a better job and learn all they could about
+          their chosen career. I have always tried to be a coach and
+          cheerleader to the people I served with.
+        </p>
+      
     <h2>Contact Links</h2>
-    <p id=links>
-      <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
-      <a href="https://privateinvestigatoredu.org/license-requirements/">More Info</a><br>
-      <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html">Contact</a><br>
-    </p>
+      <p id="links">
+        <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
+        <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html">Contact</a><br>
+        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/">What is a P.I.?</a><br>
+      </p>
 
+    <h2>References</h2>
+      <ul>
+        <li>Mike Minkler C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
+        <li>Father Gary St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
+        <li>Ben Campbell - East Pikeland Township Supervisor 610-678- 7699</li>
+      </ul>
 
   </body>
 </div>
