--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
       
     <h2>Contact Links</h2>
       <p id="links">
-        <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html">Home</a><br>
-        <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html">Contact</a><br>
-        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/">What is a P.I.?</a><br>
+        <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html" target="_blank">Home</a><br>
+        <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html" target="_blank">Contact</a><br>
+        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/" target="_blank">What is a P.I.?</a><br>
       </p>
 
     <h2>References</h2>
