picture oriented and locally included

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <body>
     <title>James Franciscus, Safety Officer</title>
     <h1>James Franciscus, Safety Officer</h1>
-    <!-- Fix file size and orientation 
-    <img src="https://cdn.discordapp.com/attachments/403193299244023808/444586274150547456/image.jpg" alt="Mr. James Franciscus"> 
-    -->
+    <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
+    <br>
     <h2>Experience</h2>
       <h3>
         SIGNAL 88 SECURITY (CONTRACTED SECURITY COMPANY)<br>
