played with image and image wrapping

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-  <title>jamesfranciscus</title>
-  <h1>James Franciscus, Private Investigator</h1>
+  <title>James Franciscus, Private Detective</title>
+  <h1>James Franciscus, Private Detective</h1>
   <p>Contact Information</p>
   <ul>
     <li>Phone: 484-985-1248</li>
