--- a/index.html
+++ b/index.html
@@ -6,38 +6,43 @@
 
 <div id="body">
   <body>
-    <title>James Franciscus, Safety Officer</title>
-    <h1>James Franciscus, Safety Officer</h1>
-    <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
-    <br>
-    <h2>Experience</h2>
-      <h3>
-        SIGNAL 88 SECURITY (CONTRACTED SECURITY COMPANY)<br>
-        MARCH 2016 TO PRESENT<br>
-      </h3>
-        <p id="sig88">
-          I started at the Octorara School District as an armed
-          security officer. I made patrols by foot and automobile of all
-          schools. I acted as a deterrent to crime and enforced
-          school district rules and policies. July 2016 I was promoted
-          to an operations manager. I am responsible for the overall
-          operations of the Brandywine Hospital, Phoenixville
-          Hospital and Jenner’s Ponds accounts. This includes
-          quality control, hiring, firing, and training security officers.
-        </p>
+    <title>James Franciscus, Private Detective</title>
+    <h1>James Franciscus, Private Detective</h1>
+    <div id="floated">
+      <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
+    </div>
+    <div id="container">
+      <h2>Experience</h2>
+        <h3>
+          SIGNAL 88 SECURITY (CONTRACTED SECURITY COMPANY)<br>
+          MARCH 2016 TO PRESENT<br>
+        </h3>
+          <p id="sig88">
+            I started at the Octorara School District as an armed
+            security officer. I made patrols by foot and automobile of all
+            schools. I acted as a deterrent to crime and enforced
+            school district rules and policies. July 2016 I was promoted
+            to an operations manager. I am responsible for the overall
+            operations of the Brandywine Hospital, Phoenixville
+            Hospital and Jenner’s Ponds accounts. This includes
+            quality control, hiring, firing, and training security officers.
+          </p>
+        <br>
+        <h3>
+          EAST PIKELAND TOWNSHIP<br>
+          JUNE 2002 UNTIL MAY 2016<br>
+        </h3>
+          <p id="pchief">     
+            I was the Chief of Police and responsible for the overall
+            operations of the Police Department. This included
+            budgeting, planning, hiring, disciplinary actions, interacting
+            with elected officials, and citizen’s groups, problem solving,
+            scheduling and investigations. I retired from this position
+            May 2016.
+          </p>
+      
       <br>
-      <h3>
-        EAST PIKELAND TOWNSHIP<br>
-        JUNE 2002 UNTIL MAY 2016<br>
-      </h3>
-        <p id="pchief">     
-          I was the Chief of Police and responsible for the overall
-          operations of the Police Department. This included
-          budgeting, planning, hiring, disciplinary actions, interacting
-          with elected officials, and citizen’s groups, problem solving,
-          scheduling and investigations. I retired from this position
-          May 2016.
-        </p>
+      <img id="badge" src="jf_badge1.jpg" alt="Private Detective's Badge">
       <br>
       <h3>
         EDUCATION
@@ -84,16 +89,16 @@
       <p id="links">
         <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html" target="_blank">Home</a><br>
         <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html" target="_blank">Contact</a><br>
-        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/" target="_blank">What is a P.I.?</a><br>
+        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/" target="_blank">What is a P.D.?</a><br>
       </p>
 
     <h2>References</h2>
       <ul>
         <li>Mike Minkler C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
         <li>Father Gary St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
-        <li>Ben Campbell - East Pikeland Township Supervisor 610-678- 7699</li>
+        <li>Ben Campbell - East Pikeland Township Supervisor - East Pikeland, Pa. 610-678- 7699</li>
       </ul>
-
+  </div>
   </body>
 </div>
 
