added 'david_vaylo' biography portions

--- a/index.html
+++ b/index.html
@@ -8,83 +8,35 @@
   <body>
     <title>James Franciscus, Private Detective</title>
     <h1>James Franciscus, Private Detective</h1>
-    <div id="floated">
-      <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
-    </div>
     <div id="container">
-      <h2>Experience</h2>
-        <h3>
-          SIGNAL 88 SECURITY (CONTRACTED SECURITY COMPANY)<br>
-          MARCH 2016 TO PRESENT<br>
-        </h3>
-          <p id="sig88">
-            I started at the Octorara School District as an armed
-            security officer. I made patrols by foot and automobile of all
-            schools. I acted as a deterrent to crime and enforced
-            school district rules and policies. July 2016 I was promoted
-            to an operations manager. I am responsible for the overall
-            operations of the Brandywine Hospital, Phoenixville
-            Hospital and Jenner’s Ponds accounts. This includes
-            quality control, hiring, firing, and training security officers.
+      <h2>Biographies</h2>
+      <div id="floated">
+        <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
+      </div>
+        <h3>James Franciscus</h3>
+          <p>
+            Prior to retirement James Franciscus was employed as the Chief of Police in both Caln Township (27 years) <br>
+            and East Pikeland Township (14 years).  During the course of his 41-year career in law enforcement Mr. Franciscus <br>
+            served as a detective investigating robberies, assaults, thefts, domestic violence, background and internal <br>
+            investigations. He is a graduate from the F.B.I. National Academy, past president of the Chester County Police Chiefs <br>
+            Association, a member of the International Association of Chiefs of Police and is a licensed private detective. <br>
           </p>
-        <br>
-        <h3>
-          EAST PIKELAND TOWNSHIP<br>
-          JUNE 2002 UNTIL MAY 2016<br>
-        </h3>
-          <p id="pchief">     
-            I was the Chief of Police and responsible for the overall
-            operations of the Police Department. This included
-            budgeting, planning, hiring, disciplinary actions, interacting
-            with elected officials, and citizen’s groups, problem solving,
-            scheduling and investigations. I retired from this position
-            May 2016.
+
+        <h3>David Vaylo</h3>
+          <p>
+            Dave was born and raised in Paoli.  After graduation from Gannon University with a BA in Criminal Justice he <br>
+            completed an internship with the Erie Police Department but then decided to move back home.  He started his career <br>
+            in Corporate Security at Wyeth Pharmaceuticals in West Chester.   From there his 40 plus year career took him to a <br>
+            number of Fortune 500 Companies in various leadership positions. He is an experienced senior level manager with a <br>
+            proven track record of leadership and extensive knowledge in the design and use of electronic security systems, to <br>
+            include CCTV, Card Access, Intercom Systems and Life Safety.  He has conducted major investigations in the financial, <br>
+            pharmaceutical and precious metal sectors.  Others skill sets include: Conducting Site Security Risk Analysis, <br>
+            Project Management, Six Sigma Specialist, Security Training, Security/Safety Audits, Quality Assurance, and <br>
+            Public Speaking. Dave went on to achieve his Master’s degree from West Chester University in Criminal Justice <br>
+            Administration.  Dave is a certified fraud specialist, also certified in Homeland Security level 3 and has been a <br>
+            member of the ASIS International and the International Security Management Association.  He now resides in <br>
+            Phoenixville, PA.  <br>
           </p>
-      
-      <br>
-      <img id="badge" src="jf_badge1.jpg" alt="Private Detective's Badge">
-      <br>
-      <h3>
-        EDUCATION
-      </h3>
-        <p id="edu">
-          I am a graduate of the Coatesville Area School District. I
-          also graduated from the Pennsylvania State Police
-          Academy and the F.B.I. National Academy. I have also
-          attended many management and criminal justice training
-          classes during my career.
-        </p>
-      <br>
-      <h3>
-        COMMUNICATION
-      </h3>
-        <p id="comm">
-          During my career, I, have had to communicate both
-          verbally and in writing to elected officials, neighborhood
-          association groups, District Attorney’s Office, news media,
-          subordinates, citizens in the community, along with people
-          under stressful situations.
-          <br>
-          I feel that I have kept my superiors well informed and have
-          been an effective communicator with others I have
-          encountered.
-        </p>
-      <br>
-      <h3>
-        LEADERSHIP
-      </h3>
-        <p id="lead">
-          I have held many leadership positions during my career
-          and I feel that I have been an effective leader. I have been a Chief of 
-          Police in two Chester County communities,
-          President of the Chester County Police Chief’s
-          Association. I have always lead by setting a good example,
-          setting the bar high for subordinates, helping to develop
-          employees to do a better job and learn all they could about
-          their chosen career. I have always tried to be a coach and
-          cheerleader to the people I served with.
-        </p>
-      
     <h2>Contact Links</h2>
       <p id="links">
         <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html" target="_blank">Home</a><br>
