d.v. bio and picture added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
             investigations. He is a graduate from the F.B.I. National Academy, past president of the Chester County Police Chiefs <br>
             Association, a member of the International Association of Chiefs of Police and is a licensed private detective. <br>
           </p>
-
+        <h4>References</h4>
+          <ul>
+            <li>Mike Minkler C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
+            <li>Father Gary St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
+            <li>Ben Campbell - East Pikeland Township Supervisor - East Pikeland, Pa. 610-678- 7699</li>
+          </ul>
+      <div id="floated">
+        <img id="dv1" src="david_vaylo.png" alt="Mr. David Vaylo">
+      </div>
         <h3>David Vaylo</h3>
           <p>
             Dave was born and raised in Paoli.  After graduation from Gannon University with a BA in Criminal Justice he <br>
@@ -37,20 +45,22 @@
             member of the ASIS International and the International Security Management Association.  He now resides in <br>
             Phoenixville, PA.  <br>
           </p>
-    <h2>Contact Links</h2>
-      <p id="links">
-        <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html" target="_blank">Home</a><br>
-        <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html" target="_blank">Contact</a><br>
-        <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/" target="_blank">What is a P.D.?</a><br>
-      </p>
-
-    <h2>References</h2>
-      <ul>
-        <li>Mike Minkler C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
-        <li>Father Gary St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
-        <li>Ben Campbell - East Pikeland Township Supervisor - East Pikeland, Pa. 610-678- 7699</li>
-      </ul>
+        <h4>Corporate Experience</h4>
+          <ul>
+            <li>IKEA</li>
+            <li>Johnson Matthey</li>
+            <li>Vanguard</li>
+            <li>Wyeth Pharmaceuticals</li>
+            <li>Allied Barton Security Services</li>
+          </ul>
   </div>
+
+  <h2>Contact Links</h2>
+    <p id="links">
+      <a href="https://jamesfranciscus.github.io/jamesfranciscus/index.html" target="_blank">Home</a><br>
+      <a href="https://jamesfranciscus.github.io/jamesfranciscus/contact.html" target="_blank">Contact</a><br>
+      <a href="https://privateinvestigatoredu.org/what-is-a-private-investigator/" target="_blank">What is a P.D.?</a><br>
+    </p>
   </body>
 </div>
 
