jf1 picture size changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>James Franciscus, Private Detective</h1>
     <div id="container">
       <h2>Biographies</h2>
-      <div id="floated">
+      <div id="floated1">
         <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
       </div>
         <h3>James Franciscus</h3>
