text bio spacing

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
         <h3>David Vaylo</h3>
           <p>
             Dave was born and raised in Paoli.  After graduation from Gannon University with a BA in Criminal Justice he
-            completed an internship with the Erie Police Department but then decided to move back home.  He started his career <br>
-            in Corporate Security at Wyeth Pharmaceuticals in West Chester.   From there his 40 plus year career took him to a <br>
+            completed an internship with the Erie Police Department but then decided to move back home.  He started his career
+            in Corporate Security at Wyeth Pharmaceuticals in West Chester.   From there his 40 plus year career took him to a
             number of Fortune 500 Companies in various leadership positions. He is an experienced senior level manager with a
-            proven track record of leadership and extensive knowledge in the design and use of electronic security systems, to <br>
-            include CCTV, Card Access, Intercom Systems and Life Safety.  He has conducted major investigations in the financial, <br>
+            proven track record of leadership and extensive knowledge in the design and use of electronic security systems, to
+            include CCTV, Card Access, Intercom Systems and Life Safety.  He has conducted major investigations in the financial,
             pharmaceutical and precious metal sectors.  Others skill sets include: Conducting Site Security Risk Analysis,
-            Project Management, Six Sigma Specialist, Security Training, Security/Safety Audits, Quality Assurance, and <br>
-            Public Speaking. Dave went on to achieve his Master’s degree from West Chester University in Criminal Justice <br>
+            Project Management, Six Sigma Specialist, Security Training, Security/Safety Audits, Quality Assurance, and
+            Public Speaking. Dave went on to achieve his Master’s degree from West Chester University in Criminal Justice
             Administration.  Dave is a certified fraud specialist, also certified in Homeland Security level 3 and has been a
-            member of the ASIS International and the International Security Management Association.  He now resides in <br>
-            Phoenixville, PA.  <br>
+            member of the ASIS International and the International Security Management Association.  He now resides in
+            Phoenixville, PA.
           </p>
         <h4>Corporate Experience</h4>
           <ul>
