brand naming placeholders

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
 <div id="body">
   <body>
-    <title>James Franciscus, Private Detective</title>
-    <h1>James Franciscus, Private Detective</h1>
+    <title>Brand Name Here</title>
+    <h1>Brand Name, Private Investigation Group</h1>
     <div id="container">
       <h2>Biographies</h2>
       <div id="floated1">
         <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
       </div>
-        <h3>James Franciscus</h3>
+        <h1>James Franciscus</h1>
           <p>
             Prior to retirement James Franciscus was employed as the Chief of Police in both Caln Township (27 years) <br>
             and East Pikeland Township (14 years).  During the course of his 41-year career in law enforcement Mr. Franciscus <br>
@@ -30,7 +30,7 @@
       <div id="floated">
         <img id="dv1" src="david_vaylo.png" alt="Mr. David Vaylo">
       </div>
-        <h3>David Vaylo</h3>
+        <h1>David R. Vaylo</h1>
           <p>
             Dave was born and raised in Paoli.  After graduation from Gannon University with a BA in Criminal Justice he
             completed an internship with the Erie Police Department but then decided to move back home.  He started his career
