--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
       </div>
         <h1>James Franciscus</h1>
           <p>
-            Prior to retirement James Franciscus was employed as the Chief of Police in both Caln Township (27 years) <br>
-            and East Pikeland Township (14 years).  During the course of his 41-year career in law enforcement Mr. Franciscus <br>
-            served as a detective investigating robberies, assaults, thefts, domestic violence, background and internal <br>
-            investigations. He is a graduate from the F.B.I. National Academy, past president of the Chester County Police Chiefs <br>
-            Association, a member of the International Association of Chiefs of Police and is a licensed private detective. <br>
+            Prior to retirement James Franciscus was employed as the Chief of Police in both Caln Township (27 years)
+            and East Pikeland Township (14 years).  During the course of his 41-year career in law enforcement Mr. Franciscus
+            served as a detective investigating robberies, assaults, thefts, domestic violence, background and internal
+            investigations. He is a graduate from the F.B.I. National Academy, past president of the Chester County Police Chiefs
+            Association, a member of the International Association of Chiefs of Police and is a licensed private detective.
           </p>
         <h4>References</h4>
           <ul>
-            <li>Mike Minkler C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
-            <li>Father Gary St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
+            <li>Mike Minkler - C.M.C Engineering Local Business Owner - Kimberton, Pa. 610-983- 9200</li>
+            <li>Father Gary - St Basel’s Church Local Priest - Kimberton, Pa. 215-837- 7732</li>
             <li>Ben Campbell - East Pikeland Township Supervisor - East Pikeland, Pa. 610-678- 7699</li>
           </ul>
       <div id="floated">
