added information to contacts

--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,17 @@
   <h1>James Franciscus, Private Detective</h1>
   <p>Contact Information</p>
   <ul>
+    <li>Call us for reasonable rates</li>
     <li>Phone: 484-985-1248</li>
-    <li>Address: 1101 Cambria Court, Phoenixville, Pa. 19460</li>
-    <li>Email: jfranciscus@outlook.com</li>
+    <li>Email: jwf19460@gmail.com</li>
+  </ul>
+  <br>
+  <ul>Services we provide:
+    <li>Background Investigations</li>
+    <li>Civil Investigation</li>
+    <li>Fraud Investigation</li>
+    <li>Security Evaluation and Design</li>
+    <li>Armed and Unarmed Quality Security Officers</li>
   </ul>
 </head>
 
