--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 <div id="body">
   <body>
-    <title>Brand Name Here</title>
-    <h1>Brand Name, Private Investigation Group</h1>
+    <title>James Franciscuas Private Investigations</title>
+    <h1>James Franciscus, Private Investigation Group</h1>
     <div id="container">
-      <h2>Biographies</h2>
+      <h2>Staff Biographies</h2>
         <img id="jf1" src="jamesfranciscus_1.jpg" alt="Mr. James Franciscus">
       
         <h1>James Franciscus</h1>
