contact page formatting

--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,17 @@
 
   <title>James Franciscus, Private Detective</title>
   <h1>James Franciscus, Private Detective</h1>
-  <p>Contact Information</p>
+  <p>
+  Contact Information
+  Call us for reasonable rates
+  </p>
   <ul>
-    <li>Call us for reasonable rates</li>
     <li>Phone: 484-985-1248</li>
     <li>Email: jwf19460@gmail.com</li>
   </ul>
   <br>
-  <ul>Services we provide:
+  <p>Services we provide:</p>
+  <ul>
     <li>Background Investigations</li>
     <li>Civil Investigation</li>
     <li>Fraud Investigation</li>
