--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <title>James Franciscus, Private Detective</title>
   <h1>James Franciscus, Private Detective</h1>
   <p>
-  Contact Information
+  Contact Information <br>
   Call us for reasonable rates
   </p>
   <ul>
