commenting out corporate experience

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Phoenixville, PA.
           </p>
           
-        <h4>Corporate Experience</h4>
+        <!-- <h4>Corporate Experience</h4>
           <ul>
             <li>IKEA</li>
             <li>Johnson Matthey</li>
@@ -47,6 +47,7 @@
             <li>Wyeth Pharmaceuticals</li>
             <li>Allied Barton Security Services</li>
           </ul>
+      -->
           
       <h2>Contact Links</h2>
             <p id="links">
