more typo fixing

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 
-  <title>James Franciscus, Private Detective</title>
-  <h1>James Franciscus, Private Detective</h1>
+  <title>James Franciscus, Private Investigator</title>
+  <h1>James Franciscus, Private Investigator</h1>
   <p>
   Contact Information <br>
   Call us for reasonable rates
